nvidia_gpus/all_apps/v100_testing/67886.error
  File "profile_sweep.py", line 31
    if not os.path.isfile(executable +"_results/" + executable + "_N" + str(n_size) + ".csv")
                                                                                            ^
SyntaxError: invalid syntax
